fix: remove config/ from .dockerignore to fix Docker build
- Comment out config/ exclusion in .dockerignore
- Docker build needs access to checkstyle/PMD/SpotBugs configurations
- Fixes 'config: not found' error in Docker Build Validation

The config directory contains essential build configuration files
that must be available during the Docker build process.

--- a/.dockerignore
+++ b/.dockerignore
@@ -70,7 +70,7 @@ Jenkinsfile
 .circleci/
 
 # Quality tools configs
-config/
+# config/ - Need this for build process
 .checkstyle
 .pmdcache
 spotbugsXml.xml
